--- a/controllers/settings/_list_toolbar.htm
+++ b/controllers/settings/_list_toolbar.htm
@@ -14,4 +14,10 @@
             data-stripe-load-indicator>
         Delete
     </button>
+    <button
+            class="btn btn-default"
+            data-request="onClearCache"
+            data-stripe-load-indicator>
+        Clear cache
+    </button>
 </div>
