--- a/controllers/settings/_list_toolbar.htm
+++ b/controllers/settings/_list_toolbar.htm
@@ -1,5 +1,5 @@
 <div data-control="toolbar">
-    <a href="<?= Backend::url('voipdeploy/multisite/settings/create') ?>" class="btn btn-primary oc-icon-plus">New bind</a>
+    <a href="<?= Backend::url('voipdeploy/multisite/settings/create') ?>" class="btn btn-primary oc-icon-plus"><?= trans('voipdeploy.multisite::lang.controller.new-bind') ?></a>
     <button
             class="btn btn-default oc-icon-trash-o"
             disabled="disabled"
@@ -7,17 +7,17 @@
                     checked: $('.control-list').listWidget('getChecked')
                 })"
             data-request="onDelete"
-            data-request-confirm="Are you sure?"
+            data-request-confirm="<?= trans('voipdeploy.multisite::lang.controller.confirm') ?>"
             data-trigger-type="enable"
             data-trigger=".control-list input[type=checkbox]"
             data-trigger-condition="checked"
             data-stripe-load-indicator>
-        Delete
+        <?= trans('voipdeploy.multisite::lang.controller.delete') ?>
     </button>
     <button
             class="btn btn-default"
             data-request="onClearCache"
             data-stripe-load-indicator>
-        Clear cache
+        <?= trans('voipdeploy.multisite::lang.controller.clear-cache') ?>
     </button>
 </div>
