--- a/controllers/settings/update.htm
+++ b/controllers/settings/update.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('voipdeploy/multisite/settings') ?>"><?= trans('voipdeploy.multisite::lang.controller.settings'); ?></a></li>
+        <li><a href="<?= Backend::url('keios/multisite/settings') ?>"><?= trans('keios.multisite::lang.controller.settings'); ?></a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -18,28 +18,28 @@
                     data-request="onSave"
                     data-request-data="redirect:0"
                     data-hotkey="ctrl+s, cmd+s"
-                    data-load-indicator="<?= trans('voipdeploy.multisite::lang.controller.saving'); ?>"
+                    data-load-indicator="<?= trans('keios.multisite::lang.controller.saving'); ?>"
                     class="btn btn-primary">
-                    <?= trans('voipdeploy.multisite::lang.controller.save'); ?>
+                    <?= trans('keios.multisite::lang.controller.save'); ?>
                 </button>
                 <button
                     type="button"
                     data-request="onSave"
                     data-request-data="close:1"
                     data-hotkey="ctrl+enter, cmd+enter"
-                    data-load-indicator="<?= trans('voipdeploy.multisite::lang.controller.saving'); ?>"
+                    data-load-indicator="<?= trans('keios.multisite::lang.controller.saving'); ?>"
                     class="btn btn-default">
-                    <?= trans('voipdeploy.multisite::lang.controller.save-and-close'); ?>
+                    <?= trans('keios.multisite::lang.controller.save-and-close'); ?>
                 </button>
                 <button
                     type="button"
                     class="oc-icon-trash-o btn-icon danger pull-right"
                     data-request="onDelete"
-                    data-load-indicator="<?= trans('voipdeploy.multisite:lang.controller.save-delete'); ?>"
+                    data-load-indicator="<?= trans('keios.multisite:lang.controller.save-delete'); ?>"
                     data-request-confirm="Do you really want to delete this setting?">
                 </button>
                 <span class="btn-text">
-                    <?= trans('voipdeploy.multisite::lang.controller.or'); ?> <a href="<?= Backend::url('voipdeploy/multisite/settings') ?>"><?= trans('voipdeploy.multisite::lang.controller.cancel'); ?></a>
+                    <?= trans('keios.multisite::lang.controller.or'); ?> <a href="<?= Backend::url('keios/multisite/settings') ?>"><?= trans('keios.multisite::lang.controller.cancel'); ?></a>
                 </span>
             </div>
         </div>
@@ -49,6 +49,6 @@
 <?php else: ?>
 
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-    <p><a href="<?= Backend::url('voipdeploy/multisite/settings') ?>" class="btn btn-default"><?= trans('voipdeploy.multisite::lang.controller.return'); ?></a></p>
+    <p><a href="<?= Backend::url('keios/multisite/settings') ?>" class="btn btn-default"><?= trans('keios.multisite::lang.controller.return'); ?></a></p>
 
 <?php endif ?>
